--- a/hyperShot_win/hyperShot_win.vcxproj
+++ b/hyperShot_win/hyperShot_win.vcxproj
@@ -148,6 +148,7 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="system_tray.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="window_helper.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="hyperShot_win.cpp" />
@@ -158,9 +159,12 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="system_tray.cpp" />
+    <ClCompile Include="window_helper.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ResourceCompile Include="hyperShot_win.rc" />
+    <ResourceCompile Include="hyperShot_win.rc">
+      <FileType>RES</FileType>
+    </ResourceCompile>
   </ItemGroup>
   <ItemGroup>
     <Image Include="hyperShot_win.ico" />
