--- a/hyperShot_win/hyperShot_win.vcxproj
+++ b/hyperShot_win/hyperShot_win.vcxproj
@@ -145,6 +145,7 @@
   <ItemGroup>
     <ClInclude Include="hyperShot_win.h" />
     <ClInclude Include="resource.h" />
+    <ClInclude Include="screenshot.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="system_tray.h" />
     <ClInclude Include="targetver.h" />
@@ -152,6 +153,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="hyperShot_win.cpp" />
+    <ClCompile Include="screenshot.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
